--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,21 @@
     margin: 0;
     padding: 0;
 
+    
+     
+
 }
+
+/* body{
+    max-width: 1600px;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+
+} */
+
+
 
 .section-heading{
     margin: 0 auto;
@@ -44,6 +58,7 @@ nav .menu{
     gap: 32px;
 
     align-items: center;
+    cursor: pointer;
 
 }
 
@@ -94,6 +109,11 @@ nav .menu{
     padding-top: 167.6px;
 }
 
+.banner-p{
+
+    padding-top: 34px;
+}
+
 .green-text{
     color: #30B868;
 }
@@ -132,6 +152,14 @@ h1{
     border-radius: 4px;
     
 }
+
+/* .tri{
+
+     border-radius: 0.1px;
+    color: #001931;
+     border: 0.6px solid white
+     
+} */
 
 
 
@@ -178,6 +206,11 @@ h1{
 .note-card img p{
 
     padding: 10px;
+}
+
+#brain{
+
+    padding-top: 120px;
 }
 
 .brain-h1{
@@ -304,5 +337,18 @@ h1{
 
     padding-top: 26px;
     
+}
+
+.line{
+    padding-top: 40px;
+}
+
+#CheckCircle{
+
+    padding-top: 20px;
+}
+
+#f-icon{
+    color: #F7F6F2;
 }
 
